# auth-system

./: .env.example  .gitignore  Dockerfile.prod  docker-compose.yml  ec2-user-data.sh  requirements.txt
app/: main.py
app/core/: config.py  dependencies.py
app/models/: token.py  user.py
app/routers/: auth.py
app/schemas/: auth.py
app/services/: auth_service.py
app/utils/: email.py  s3.py
backend/: .dockerignore  .env.example  Dockerfile.dev  claude.md  digest.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  jwt.py  security.py
backend/app/models/: token.py  user.py
backend/app/schemas/: auth.py
backend/app/utils/: otp.py  s3.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/api/: auth.js  client.js
frontend/src/components/common/: Alert.jsx  Button.jsx  Input.jsx  Spinner.jsx
frontend/src/components/layout/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: Dashboard.jsx  ForgotPassword.jsx  Login.jsx  Profile.jsx  Register.jsx  ResetPassword.jsx  Verify2FA.jsx  VerifyEmail.jsx
frontend/src/router/: AppRouter.jsx  ProtectedRoute.jsx  PublicRoute.jsx
frontend/src/styles/: auth.css  components.css  dashboard.css  global.css
frontend/src/utils/: token.js
