[project]
name = "auth-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "beanie==1.25.0",
    "motor==3.3.1",
    "pymongo==4.6.1",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "slowapi==0.1.9",
    "uvicorn[standard]==0.29.0",
    "boto3==1.34.69",
    "python-multipart==0.0.9",
]
